# enum-variants-strings

./: Cargo.toml  README.md
.github/workflows/: crates.yml  rust.yml
enum-variants-strings/: Cargo.toml  README.md  lib.rs
enum-variants-strings-derive/: Cargo.toml  README.md  macro.rs
enum-variants-strings-derive/src/: lib.rs
enum-variants-strings/src/: lib.rs
enum-variants-strings/tests/: from_str.rs  to_str.rs  transforms.rs
