[package]
name = "enum-variants-strings-derive"
authors = [ "Ben <kaleidawave@gmail.com>" ]
description = "Derive macro for converting instances of enums to and from strs using variant names"
version = "0.0.0"
license = "MIT"
edition = "2018"
repository = "https://github.com/kaleidawave/enum-variants-strings"

[lib]
name = "enum_variants_strings_derive"
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "0.11.4"
proc-macro2 = "1.0"
syn = { version = "1.0.81", features = ["full", "extra-traits"] }
quote = "1.0.10"
either_n = "0.2.0"
