[package]
name = "enum-variants-strings-derive"
authors = ["Ben <kaleidawave@gmail.com>"]
description = "Derive macro for converting instances of enums to and from strs using variant names"
version = "0.3.0"
license = "MIT"
edition = "2021"
repository = "https://github.com/kaleidawave/enum-variants-strings"

[lib]
path = "macro.rs"
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
either_n = "0.2"
string-cases = "0.2"
