[package]
name = "enum-variants-strings"
authors = ["Ben <kaleidawave@gmail.com>"]
description = "Derive macro for converting instances of enums to and from strs using variant names"
version = "0.2.2"
license = "MIT"
edition = "2021"
readme = "../README.md"
repository = "https://github.com/kaleidawave/enum-variants-strings"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "lib.rs"

[dependencies]
enum-variants-strings-derive = { version = "0.2.2", path = "../enum-variants-strings-derive" }
